github auth (#4)
